--- a/static/home.css
+++ b/static/home.css
@@ -93,7 +93,7 @@ body {
 .comment-title {
   text-align: center;
   font-size: 16px;
-  color: #04aa6d;
+  color: var(--wahd);
 }
 .comment {
   display: flex;
@@ -122,11 +122,11 @@ body {
   font-size: 18px;
   font-weight: bold;
   border: none;
-  background-color: #04aa6d;
+  background-color: var(--wahd);
   padding: 8px 20px;
   border-radius: 10px;
   color: white;
-  box-shadow: 0 0 20px #04aa6d;
+  box-shadow: 0 0 20px var(--wahd);
 }
 
 .comment form input {
@@ -141,7 +141,7 @@ body {
 }
 
 .comment form input:focus {
-  border: 1px solid #04aa6d;
+  border: 1px solid var(--wahd);
 }
 
 .commentaires .comments {
@@ -229,7 +229,7 @@ body:has(#commentshow:checked) .second-part {
 }
 
 .tag {
-  background-color: #006a71;
+  background-color: var(--wahd);
   padding: 8px 8px;
   border-radius: 15px;
   font-size: 16px;
@@ -418,7 +418,7 @@ body:has(#post-toggle:checked) .allPost {
   border-radius: 15px;
   padding: 8px 15px;
   width: fit-content;
-  max-width: 70%;
+  max-width: 98%;
   max-height: 100%;
   overflow: auto;
   word-wrap: break-word;
@@ -451,13 +451,10 @@ body:has(#post-toggle:checked) .allPost {
   0% {
     opacity: 0;
     top: -100%;
-    transform: translate(-50%, 0);
   }
 
   100% {
     opacity: 1;
-    top: 50%;
-    transform: translate(-50%, -50%);
   }
 }
 
@@ -539,11 +536,11 @@ body:has(#filter-category:checked) .post-combine {
   width: 100px;
 }
 .jme3:hover {
-  background-color: #cdcbec;
+  background-color: #04aa6db6;
 }
 
 input[type="checkbox"].tag:checked + label.jme3 {
-  background-color: #04aa6d;
+  background-color: var(--wahd);
 }
 .aside1 form button,
 .aside2 form button {
@@ -557,7 +554,7 @@ input[type="checkbox"].tag:checked + label.jme3 {
   color: white;
   border-radius: 12px;
   margin: 20px auto 5px auto;
-  box-shadow: 0 0 5px #04dbf1;
+  box-shadow: 0 0 5px var(--wahd);
   font-size: 18px;
   font-weight: bold;
   letter-spacing: 1px;
@@ -594,7 +591,7 @@ input[type="checkbox"].tag:checked + label.jme3 {
 
 input[type="file"]::file-selector-button {
   border: none;
-  background: #04aa6d;
+  background: var(--wahd);
   padding: 6px 20px;
   font-size: 16px;
   border-radius: 5px;
@@ -656,5 +653,17 @@ input[type="file"]::file-selector-button {
   }
   .allPost {
     align-items: center;
+  }
+}
+@media screen and (max-width: 400px) {
+  .comment button {
+    font-size: 16px;
+    padding: 8px 10px;
+  }
+  .comment form {
+    margin: 0px 5px;
+  }
+  .comment-title {
+    margin-bottom: 10px;
   }
 }
