--- a/template/home.html
+++ b/template/home.html
@@ -228,6 +228,25 @@
   const toggleMenu = document.getElementById("toggle-menu");
   const postToggle = document.getElementById("post-toggle");
   const filterToggle = document.getElementById("filter-toggle1");
+  const boxes = document.querySelectorAll('.post-card');
+
+window.addEventListener('scroll', checkBoxes)
+
+checkBoxes()
+
+function checkBoxes() {
+    const triggerBottom = window.innerHeight / 5 * 4
+
+    boxes.forEach(box => {
+        const boxTop = box.getBoundingClientRect().top
+
+        if(boxTop < triggerBottom) {
+            box.classList.add('show')
+        } else {
+            box.classList.remove('show')
+        }
+    })
+}
 
   toggleMenu.addEventListener("change", function () {
     if (this.checked) {
