--- a/static/navbar.css
+++ b/static/navbar.css
@@ -18,10 +18,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 1px 2px var(--wahd);
+    transition: all 0.3s ease-in-out;
+
 }
 
-header .title {
+header #title {
   cursor: pointer;
   font-size: 45px;
   font-weight: bold;
@@ -29,6 +30,14 @@ header .title {
   -webkit-text-stroke: 2px white;
   font-family: Arial, sans-serif;
   text-decoration: none;
+}
+header.active {
+  background-color: #222831;
+  box-shadow: 0px 1px 2px var(--wahd);
+}
+header.active#title {
+  background-color: #222831;
+  box-shadow: 0px 1px 2px var(--wahd);
 }
 
 .gap {
