fix conflit of merge + fix size of image ablori

--- a/template/home.html
+++ b/template/home.html
@@ -220,7 +220,7 @@
   </div>
   </div> 
   {{else}}
-  <h1 class="notfound">No posts found 🤷‍♂️</h1>
+  <h1 class="notfound">No posts yet 🤷‍♂️</h1>
   {{end}}
   <!-- end main section -->
 </body>
