--- a/static/register.css
+++ b/static/register.css
@@ -9,18 +9,18 @@
   --akhdar: #0afb26;
   --red: #0ef;
 }
-a{
+a {
   position: fixed;
   left: 40px;
   top: 20px;
   padding: 10px;
 }
-a i{
+a i {
   color: #04aa6d;
   font-size: 35px;
 }
 .input-box input:-webkit-autofill,
-.input-box input:-webkit-autofill:hover, 
+.input-box input:-webkit-autofill:hover,
 .input-box input:-webkit-autofill:focus,
 .input-box input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
@@ -28,7 +28,6 @@ a i{
   transition: background-color 5000s ease-in-out 0s;
   caret-color: white;
 }
-
 
 /* .input-box:has(#show10:checked) i.fa-eye-slash {
   display: block;
@@ -44,8 +43,8 @@ a i{
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-.error{
-  animation: err .8s ease-in-out;
+.error {
+  animation: err 0.8s ease-in-out;
   padding: 0 10px;
   width: 350px;
   height: 50px;
@@ -55,6 +54,7 @@ a i{
   border: 2px solid #de747f;
   display: flex;
   align-items: center;
+  font-weight: bold;
   background-color: #f4838d;
   color: #000000;
   border-radius: 5px;
@@ -66,10 +66,12 @@ a i{
   margin-right: 10px;
   font-size: 20px;
 }
-.error .message{
+.error .message {
   font-size: 14px;
 }
 .error .close-btn {
+  position: absolute;
+  right: 10px;
   cursor: pointer;
   font-weight: bold;
   font-size: 20px;
@@ -81,7 +83,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: linear-gradient(135deg, #222831, #393E46);
+  background: linear-gradient(135deg, #222831, #393e46);
 }
 
 .container {
@@ -145,23 +147,23 @@ form {
   font-size: 16px;
   color: #fff;
   font-weight: 500;
-  transition: .5s;
+  transition: 0.5s;
 }
 .input-box input:focus,
-.input-box input:valid{
-    border-bottom-color: #04aa6d;
+.input-box input:valid {
+  border-bottom-color: #04aa6d;
 }
-.input-box label{
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    font-size: 16px;
-    color: #fff;
-    pointer-events: none;
-    transition: .5s;
+.input-box label {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: 0.5s;
 }
-.input-box i{
+.input-box i {
   position: absolute;
   top: 50%;
   right: 0;
@@ -171,10 +173,10 @@ form {
   cursor: pointer;
 }
 
-.input-box input:focus~label,
-.input-box input:valid~label{
-    top: -3px;
-    color: #04aa6d;
+.input-box input:focus ~ label,
+.input-box input:valid ~ label {
+  top: -3px;
+  color: #04aa6d;
 }
 
 .btn {
@@ -250,8 +252,16 @@ form {
   box-shadow: none;
 }
 @media screen and (max-width: 650px) {
+  a {
+    left: 15px;
+    top: 23px;
+  }
+  .error {
+    height: 40px;
+  }
   .container {
-    height: calc(100vh - 40px);
+    margin-top: 100px;
+    height: calc(100vh - 100px);
   }
   .form-box {
     bottom: 0;
@@ -292,8 +302,40 @@ form {
     bottom: -30%;
   }
 }
+@media screen and (max-width: 450px) {
+  .error {
+    font-size: 12px;
+    width: 300px;
+    height: 35px;
+    white-space: wrap;
+  }
+  a i {
+    font-size: 27px;
+    left: 0;
+  }
+  a {
+    left: 0;
+    top: 25px;
+  }
+}
 
 @media screen and (max-width: 400px) {
+  .error {
+    font-size: 12px;
+    width: 250px;
+    height: 35px;
+  }
+  .error .message {
+    font-size: 12px;
+  }
+  a i {
+    font-size: 27px;
+    left: 0;
+  }
+  a {
+    left: 0;
+    top: 25px;
+  }
   .form-box {
     padding: 20px;
   }
